classDiagram
direction LR

    class IAlgorithm {
        +string Name
        +void Execute(Inventory inventory)
    }

    class IProduct {
        <<interface>>
        +string Name
        +int Quantity
        +double Price
    }

    class IWarehouse {
        <<interface>>
        +string Name
        +int Capacity
    }

    class Inventory {
        -List~IProduct~ products
        -List~IWarehouse~ warehouses
        +void AddProduct(IProduct product)
        +void RemoveProduct(IProduct product)
        +void AddWarehouse(IWarehouse warehouse)
        +void RemoveWarehouse(IWarehouse warehouse)
        +List~IProduct~ GetProducts()
        +List~IWarehouse~ GetWarehouses()
    }

    class Product {
        +string Name
        +int Quantity
        +double Price
    }

    class Warehouse {
        +string Name
        +int Capacity
    }

    class IAlgorithmProvider {
        +IAlgorithm? GetAlgorithm(string name)
        +void RegisterAlgorithm(string name, Func~IAlgorithm~ creator)
    }

    class AlgorithmProvider {
        -Dictionary~string, Func~IAlgorithm~~ algorithms
        +IAlgorithm? GetAlgorithm(string name)
        +void RegisterAlgorithm(string name, Func~IAlgorithm~ creator)
    }

    class InventorySystem {
        -Inventory inventory
        -IAlgorithm currentAlgorithm
        +InventorySystem(Inventory inventory, IAlgorithm initialAlgorithm)
        +void SetAlgorithm(IAlgorithm algorithm)
        +void RunOptimization()
        +void GenerateReport()
    }

    class SimpleDeterministicAlgorithm {
        +string Name
        +void Execute(Inventory inventory)
    }

    class AdvancedStochasticAlgorithm {
        +string Name
        +void Execute(Inventory inventory)
    }

    class InventorySystemFactory {
        -IAlgorithmProvider algorithmProvider
        +InventorySystemFactory(IAlgorithmProvider algorithmProvider)
        +InventorySystem CreateSystem(string systemVersion, Inventory inventory)
    }

    %% Relaciones
    IAlgorithm <|-- SimpleDeterministicAlgorithm
    IAlgorithm <|-- AdvancedStochasticAlgorithm

    IAlgorithmProvider <|.. AlgorithmProvider

    %% Implementación de interfaces (DIP)
    IProduct <|.. Product
    IWarehouse <|.. Warehouse

    InventorySystem "1" *-- "1" Inventory
    InventorySystem "1" o-- "1" IAlgorithm

    %% Inventory ahora depende de las interfaces, no de las clases concretas
    Inventory "1" o-- "*" IProduct
    Inventory "1" o-- "*" IWarehouse

    InventorySystemFactory "1" o-- "1" IAlgorithmProvider
